# research

./: .gitignore
asi_ros1_sim/: README.md  asi_figure8.object.json  asi_main.object.json  asi_mining_loop.object.json  asi_ros1_sim.compose.yml  asi_ros1_sim.definition.json  asi_ros1_sim.stage.dockerfile  asi_ros1_sim_example.object.json  asi_ros1_sim_example2.object.json  clothoid.definition.json  cs_smpc.compose.yml  cs_smpc_local.compose.yml
asi_ros1_sim/CSSMPC_controller/: CSSMPC_asi.launch  controller.stage.dockerfile  controller2.stage.dockerfile  cs_controller_asi_convex.py  cs_model_asi.py  cs_solver_obstacle.py  mosek.lic  params.stage.dockerfile  polylines_asi.py
asi_ros1_sim/CSSMPC_controller/asi_ctrl/: package.xml  setup.py
asi_ros1_sim/CSSMPC_controller/asi_ctrl/asi_ctrl/: cs_controller_asi_convex.py  cs_model_asi.py  cs_solver_obstacle.py  polylines_asi.py
asi_ros1_sim/CSSMPC_controller/asi_msgs/: CMakeLists.txt  package.xml
asi_ros1_sim/CSSMPC_controller/asi_msgs/msg/: AsiClothoidPath.msg  AsiTBSG.msg  mapCA.msg
asi_ros1_sim/boring_controller/: arc.py  boring_controller.py  boring_controller.stage.dockerfile  boring_planner.py  clothoid.py
asi_ros1_sim/plans/: asi_figure8_path.object.json  asi_mining_loop_path.object.json
asi_ros1_sim/rviz/: asi_partners_sim.rviz  asi_partners_sim_ros2.rviz
asi_ros1_sim/surface_sim/: LinearPlateauFeature.definition.json  PlaneFeature.definition.json  RadialPlateauFeature.definition.json  SineFeature.definition.json
asi_ros1_sim/vy/: asi_ros1_sim.compose.yml  asi_ros1_sim.stage.dockerfile  asi_ros1_sim_network.compose.yml  asi_ros2_sim.compose.yml  asi_ros2_sim.stage.dockerfile  asi_ros2_sim_network.compose.yml  cs_smpc.compose.yml  cs_smpc_local.compose.yml
boring_sim/: README.md
boring_sim/rviz/: asi_partners_sim_ros2.rviz
boring_sim/vy/: asi_boring_sim.compose.yml  asi_boring_sim.stage.dockerfile
cs-smpc/CSSMPC_controller/: controller.stage.dockerfile  controller2.stage.dockerfile  mosek.lic  params.stage.dockerfile  requirements.txt
cs-smpc/CSSMPC_controller/asi_msgs/: CMakeLists.txt
cs-smpc/CSSMPC_controller/asi_msgs/msg/: AsiClothoid.msg  MapCA.msg
cs-smpc/CSSMPC_controller/asiext_msgs/: CMakeLists.txt  package.xml
cs-smpc/CSSMPC_controller/asiext_msgs/msg/: MotionVk.msg  MotionVkFieldsPresent.msg
cs-smpc/vy/: cs_smpc.compose.yml  (+1 more)
dockerfiles/: research-base.dockerfile  research-ros2.dockerfile
research-base/: Dockerfile
research-colcon/: Dockerfile
research-ros2/: Dockerfile
sim_manager_base/: Dockerfile
(+58 files in other folders)
