<package format="3">
  <name>asiext_msgs</name>
  <version>0.1.1</version>
  <description>All custom messages used for interfacing between ASI and GT</description>
  <maintainer email="jacobk@gatech.edu">Jacob Knaup</maintainer>
  <license>BSD</license>
  <author>Jacob Knaup</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
